# cardboard_game_engine

./: .gitignore  .gitmodules  :w  CMakeLists.txt  README.md  tags
.clangd/index/: context.cpp.58256E4ABBDEC72C.idx  context.hpp.035EE609234593C7.idx  context.opengl.cpp.075B685FAD60A7BD.idx  element_buffer.cpp.08602C558B56D17C.idx  element_buffer.cpp.3B211E74891B8965.idx  element_buffer.hpp.44D1EA58A7023702.idx  element_buffer.hpp.55C68259A3C5FD7D.idx  element_buffer.opengl.cpp.5DCF44CA11DA0B38.idx  element_buffer.opengl.hpp.67F9B7F845B15D0A.idx  file.cpp.38480E27658657F8.idx  file.hpp.F4A93187F84D0C95.idx  glad.c.A1CFB9CC815B8779.idx  glad.h.C51947C84F57B03F.idx  khrplatform.h.08ABDA5F5CCE9E92.idx  main.cpp.77D3BA0BCE1B01AD.idx  mesh.cpp.59499AC0CD972B1A.idx  mesh.hpp.50EC9704F748F725.idx  mesh.hpp.5DC05A8FB876D698.idx  mesh.opengl.cpp.1B7D534BC0C9B73D.idx  mesh.opengl.hpp.3079825F3627F702.idx  quad_renderer.cpp.E4217CDA6DCE1942.idx  quad_renderer.hpp.93F770F165D41A25.idx  shader.cpp.F535468EB580F575.idx  shader.hpp.50651F67E544C31F.idx  shader.hpp.DD95BC46C4C43D3A.idx  shader.opengl.cpp.4BE57492800D40C9.idx  shader.opengl.hpp.071C1A7C5B43CF0B.idx  unique.hpp.DFE094209E62480D.idx  vertex.cpp.AB65534CA1DB4505.idx  vertex.hpp.E993BD7BF86423D5.idx  vertex_array.cpp.6988B6802CB81E14.idx  vertex_array.hpp.3E090194890E7341.idx  vertex_array.hpp.B11C520D933A4A3D.idx  vertex_buffer.cpp.0A5E3146C9BA8D42.idx  vertex_buffer.cpp.6EBDEA570244C180.idx  vertex_buffer.hpp.05956F90581364D0.idx  vertex_buffer.hpp.33E32B855F684A79.idx  vertex_buffer.opengl.cpp.CB75B549C79A08AE.idx  vertex_buffer.opengl.hpp.16B7D1DCEBCE5A94.idx  window.cpp.9184F3FF62A13644.idx  (+4 more)
.github/workflows/: ccpp.yml
assets/: simple.fragment.glsl  simple.vertex.glsl
dep/cardboard_imgui/: cardboard_imgui.hpp
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/stbi/: CMakeLists.txt
src/: main.cpp
src/core/: layer.cpp  layer.hpp  timer.cpp  timer.hpp
src/graphics/: camera.cpp  camera.hpp  context.hpp  context.opengl.cpp  element_buffer.cpp  element_buffer.hpp  element_buffer.opengl.cpp  mesh.hpp  particle_system.cpp  particle_system.hpp  particlesystem.class.json  quad_renderer.hpp  shader.hpp  shader.opengl.cpp  texture.hpp  texture_batch.hpp  texture_data.cpp  texture_data.hpp  vertex.cpp  vertex.hpp  vertex_array.hpp  vertex_attrib.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer.opengl.cpp  window.hpp  window.opengl.cpp
src/graphics/opengl/: context.cpp  element_buffer.cpp  element_buffer.hpp  mesh.cpp  mesh.hpp  quad_renderer.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_batch.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window.cpp  window.hpp
src/resources/: build.cmake  file.cpp  file.hpp  file.test.cpp  key.hpp  keyboard.hpp  keyboard_key.hpp  mouse.hpp  mouse_key.hpp  mouse_mode.hpp  pool.hpp  texture_loader.cpp  texture_loader.hpp  window.hpp
src/resources/glfw/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
